# drifter

./: Cargo.toml  flake.nix
assets/models/: crt.glb
assets/shaders/: crt.wgsl
src/: assets.rs  event.rs  main.rs  vueko.rs
src/fx/: crt.rs  mod.rs
